--- a/assets/style/scss/_mixin.scss
+++ b/assets/style/scss/_mixin.scss
@@ -35,6 +35,7 @@
   display: inline-block;
   text-align: center;
   line-height: 1.6;
+  text-transform: uppercase;
 
   background: linear-gradient(to right, $bghover 50%, transparent 50%);
   background-size: 200% 100%;
@@ -94,6 +95,7 @@
   display: inline-block;
   text-align: center;
   line-height: 1.6;
+  text-transform: uppercase;
 
   background: linear-gradient(to right, $bghover 50%, $bg 50%);
   background-size: 200% 100%;
