--- a/assets/style/scss/_nav.scss
+++ b/assets/style/scss/_nav.scss
@@ -107,6 +107,7 @@ nav {
       padding: 0;
       font-weight: bold;
       position: relative;
+      text-transform: uppercase;
 
       &.dropdown-toggle {
         margin-right: 30px;
@@ -225,6 +226,7 @@ nav {
             border-bottom: 1px solid $gray-soft;
             padding: 1rem 22px;
             font-size: 14px;
+            text-transform: uppercase;
 
             &:hover, &.active {
               background-color: transparent;
@@ -273,6 +275,7 @@ nav {
               color: #b4bed4;
               margin-bottom: 15px;
               padding-bottom: 10px;
+              text-transform: uppercase;
             }
           }
         }
@@ -293,6 +296,7 @@ nav {
           margin: 0;
           padding: 10px;
           margin-bottom: 10px;
+          text-transform: uppercase;
         }
       }
     }
@@ -306,6 +310,7 @@ nav {
     .nav-item {
 
       .nav-link {
+        text-transform: uppercase;
 
         &:hover {
           color: $pink;
@@ -338,6 +343,7 @@ nav {
             font-weight: bold;
             border-bottom: 1px solid $gray-soft;
             padding: 0.5rem 22px;
+            text-transform: uppercase;
 
             &:hover {
               background-color: transparent;
@@ -370,6 +376,7 @@ nav {
             margin: 0;
             padding: 10px;
             margin-bottom: 10px;
+            text-transform: uppercase;
           }
         }
       }
